Fix styling for Index when on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,17 @@
 @import "bootstrap";
 
 
+
+/*
+ * Variables
+ */
+
+$small: 400px;
+$medium: 900px;
+
+
+
+
 body {
 	font-size: 14px !important;
   /*background: #bfbfbf;*/
@@ -126,6 +137,28 @@ strong, h1, h2, h3, h4, h5 {
 
   .resource-description {
     margin: 0 0 0 20px;
+
+    @media screen and (max-width: $small) {
+      ul {
+        margin: 10px 0px !important;
+        padding: 0px;
+      }
+    }
+  }
+
+
+  @media screen and (max-width: $small) {
+    .resource-link > h2 {
+      margin: 0px !important;
+      padding: 0px;
+      font-size: 16px;
+      font-weight: 700;
+      line-height: 1.4em;
+    }
+
+    .resource-description {
+      flex: 2;
+    }
   }
 
   .resource-description > ul {
